# Engine

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md
.github/workflows/: build.yml
benchmarks/: CMakeLists.txt
benchmarks/dft/: CMakeLists.txt
cmake/: FindFFTW.cmake  UseClangFormat.cmake  UseClangTidy.cmake
doc/: CMakeLists.txt  Doxyfile.in  coverage.dox.in
examples/: CMakeLists.txt
examples/dft/: CMakeLists.txt  fftw3_wrapper-example.cpp
examples/spectral_analysis/: CMakeLists.txt  periodogram-example.cpp
include/: engine.hpp  spp.hpp
include/algorithms/: generation.hpp  integration.hpp
include/complex/: algorithms.hpp  concepts.hpp
include/dft/: dft.hpp  dft_policies.hpp  dft_types.hpp  dft_wrapper_api.hpp
include/dft/fftw3/: fftw3_wrapper.hpp
include/engine/: algorithms.hpp  complex.hpp  contexts.hpp  dft.hpp  execution_contexts.hpp  memory_resources.hpp  monitoring.hpp  parser.hpp  plot.hpp  spectral_analysis.hpp  utils.hpp
include/engine/algorithms/: generation.hpp  integration.hpp
include/engine/complex/: algorithms.hpp  concepts.hpp
include/engine/contexts/: basic_types.hpp  concepts.hpp  contexts_api.hpp  err_codes.hpp  queue_utils.hpp  strand.hpp  task_utils.hpp  tokens.hpp
include/engine/dft/: dft.hpp  dft_policies.hpp  dft_types.hpp  dft_wrapper_api.hpp
include/engine/dft/fftw3/: fftw3_wrapper.hpp
include/engine/monitoring/: concepts.hpp  monitoring.hpp  monitoring_data.hpp  task_decorators.hpp
include/engine/parser/: csv_parser.hpp
include/engine/plot/: plot.hpp
include/engine/spectral_analysis/: periodogram.hpp
include/engine/utils/: conversion.hpp
include/parser/: csv_parser.hpp
include/plot/: plot.hpp
include/spectral_analysis/: spectral_analysis.hpp
include/utils/: conversion.hpp
lib/: CMakeLists.txt
lib/complex/: CMakeLists.txt
lib/contexts/: CMakeLists.txt  strand.cpp  task_utils.cpp
lib/dft/: CMakeLists.txt
lib/dft/fftw3/: fftw3_wrapper.cpp
lib/execution_contexts/: CMakeLists.txt
lib/memory_resources/: CMakeLists.txt
lib/monitoring/: CMakeLists.txt  monitoring.cpp
lib/plot/: CMakeLists.txt
lib/report/: CMakeLists.txt
lib/spectral_analysis/: CMakeLists.txt
project/: CMakeLists.txt
project/app1/: CMakeLists.txt
project/app1/src/: CMakeLists.txt  hello.cpp
project/app1/tests/: CMakeLists.txt
project/app1/tests/unit/: CMakeLists.txt  hello-test.cpp
project/lib1/: CMakeLists.txt
project/lib1/src/: CMakeLists.txt  hello.cpp
project/lib1/tests/: CMakeLists.txt
project/lib1/tests/unit/: CMakeLists.txt  hello-test.cpp
project/lib2/: CMakeLists.txt
project/lib2/src/: CMakeLists.txt  hello.cpp
project/lib2/tests/: CMakeLists.txt
project/lib2/tests/unit/: CMakeLists.txt  hello-test.cpp
spp/: CMakeLists.txt
spp/dft/: CMakeLists.txt
spp/dft/benchmarks/micro/: CMakeLists.txt  fftw3-bench.cpp  fftw3-bench.hpp  hello-bench.cpp
spp/dft/examples/: CMakeLists.txt  fftw3_wrapper-example.cpp
spp/dft/include/dft/: dft.hpp  dft_api.hpp  dft_concepts.hpp  dft_policies.hpp  dft_types.hpp  fft_plan.hpp  policies.hpp
spp/dft/include/dft/fftw3/: fftw3_wrapper.hpp
spp/dft/src/: dft.cpp
spp/dft/src/fftw3/: fftw3_wrapper.cpp
spp/dft/tests/unit/: CMakeLists.txt  fftw3_wrapper-test.cpp  hello-test.cpp
spp/plot/: CMakeLists.txt
spp/tools/: CMakeLists.txt
spp/tools/pico/: CMakeLists.txt
tests/: CMakeLists.txt
tests/algorithms/: CMakeLists.txt  generation-test.cpp  test-integration.cpp  test-normalize.cpp
tests/contexts/: CMakeLists.txt  strand-test.cpp  task_utils-test.cpp
tests/dft/: CMakeLists.txt  fftw3_wrapper-test.cpp
tests/monitoring/: CMakeLists.txt  monitoring-test.cpp  monitoring_data_parser-test.cpp  task_decorator-test.cpp  task_notifier-test.cpp
tests/parser/: CMakeLists.txt  csv-test.cpp
tests/spectral_analysis/: CMakeLists.txt  test-periodogram.cpp
tools/: CMakeLists.txt
tools/dummy_app/: CMakeLists.txt
tools/dummy_app/src/: main.cpp
tools/pico/: CMakeLists.txt
tools/pico/include/: PicoApplication.hpp
tools/pico/src/: PicoApplication.cpp  main.cpp
tools/watch/: CMakeLists.txt
tools/watch/src/: main.cpp
